syntax = "proto3";

option go_package = "goLikes/tools/proto";

package likes;

service Likes {
    rpc doLike (DoLikeParams) returns (GetLikeCountReply) {}
    rpc getLikeCount (GetLikeCountParams) returns (GetLikeCountReply) {}
}

message DoLikeParams {
    string TargetAccount = 1;
    string CurrentAccount = 2;
}
    
message GetLikeCountParams {
    string TargetAccount = 1;
}
    
message GetLikeCountReply {
    string likes = 1;
    string error = 2;
}
